<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password"> Password </string>
    <string name="create_new_account">Create A New Account</string>
    <string name="login_with_existing_account">Login With Existing Account</string>
    <string name="welcome_title">Welcome to Shoe Store Title</string>
    <string name="welcome_detail">Welcome to Shoe Store Detail</string>
    <string name="next">Continue</string>
    <string name="instruction_title">Instruction Title</string>
    <string name="instruction_detail">Instruction Detail</string>
    <string name="show_shoe_list">Continue to Shoe List</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="login">Login</string>

</resources>
