<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoedetail.ShoeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtShoeName" />

        <TextView
            android:id="@+id/libShoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintEnd_toEndOf="@+id/lblShoeName"
            app:layout_constraintTop_toTopOf="@+id/edtShoeCompany" />

        <TextView
            android:id="@+id/lblShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="@+id/libShoeCompany"
            app:layout_constraintTop_toTopOf="@+id/edtShoeSize" />

        <TextView
            android:id="@+id/lblShoeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            app:layout_constraintEnd_toEndOf="@+id/lblShoeSize"
            app:layout_constraintTop_toTopOf="@+id/edtShoeDesc" />

        <EditText
            android:id="@+id/edtShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:accessibilityLiveRegion="polite"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblShoeName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtShoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:accessibilityLiveRegion="polite"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toEndOf="@+id/libShoeCompany"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edtShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:accessibilityLiveRegion="polite"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblShoeSize"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeCompany"
            app:layout_constraintVertical_bias="0.005" />

        <EditText
            android:id="@+id/edtShoeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:accessibilityLiveRegion="polite"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblShoeDesc"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeSize"
            app:layout_constraintVertical_bias="0.056" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>